# python-celebrerclient

./: README.md  requirements.txt  setup.cfg
celebrerclient/: __init__.py  client.py  shell.py
celebrerclient/common/: exceptions.py  http.py  utils.py
celebrerclient/v1/: actions.py  actions.py~  client.py  shell.py
