[metadata]
name = python-celebrerclient
summary = python-celebrerclient
description-file =
    README.md
license = Apache License, Version 2.0
author = Alexey Galkin
author-email = agalkin@mirantis.com
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
        celebrerclient

[entry_points]
console_scripts =
    celebrer = celebrerclient.shell:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1